[gd_scene load_steps=14 format=3 uid="uid://x8ulty73bcdl"]

[ext_resource type="Script" uid="uid://c0kmlmewb3vxa" path="res://GUI/map_room.gd" id="1_wiavm"]
[ext_resource type="Texture2D" uid="uid://e5xemx6k5mkj" path="res://GUI/icons.png" id="2_wiavm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wiavm"]
atlas = ExtResource("2_wiavm")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i3lx"]
atlas = ExtResource("2_wiavm")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qian6"]
atlas = ExtResource("2_wiavm")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nle43"]
atlas = ExtResource("2_wiavm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvhms"]
atlas = ExtResource("2_wiavm")
region = Rect2(24, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_qian6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiavm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i3lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qian6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nle43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvhms")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vw6kk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoomVisuals:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RoomVisuals/Line2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pva1d"]
resource_name = "highlight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoomVisuals:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}

[sub_resource type="Animation" id="Animation_tu1x4"]
resource_name = "select"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoomVisuals/Line2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_map_room_selected"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_au1ei"]
_data = {
&"RESET": SubResource("Animation_vw6kk"),
&"highlight": SubResource("Animation_pva1d"),
&"select": SubResource("Animation_tu1x4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vw6kk"]
radius = 16.0

[node name="MapRoom" type="Area2D"]
position = Vector2(160, 80)
collision_layer = 8
collision_mask = 0
script = ExtResource("1_wiavm")

[node name="RoomVisuals" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="RoomVisuals"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.352096, 0.285211)
points = PackedVector2Array(0, -56.0988, 45.4422, -28.0494, 45.4422, 28.0494, 0, 56.0988, -45.4422, 28.0494, -45.4422, -28.0494)
closed = true
width = 5.0
default_color = Color(0.310762, 0.451059, 0.235512, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RoomVisuals"]
sprite_frames = SubResource("SpriteFrames_qian6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_au1ei")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.52, 0.480002)
shape = SubResource("CircleShape2D_vw6kk")

[node name="Control" type="Control" parent="."]
show_behind_parent = true
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 11.0
offset_bottom = 12.0
scale = Vector2(0.825358, 0.801099)
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
